# flask-tools

./: pyproject.toml
examples/RAG/: README.md
examples/similarity_search/: README.md  main.py
flask_tools/chemistry/: polymerizer.py  polymerizer_tool_server.py
flask_tools/rag/: rag_mcp_server.py
flask_tools/retrosynthesis/: flaskv2_tool_server.py
flask_tools/similarity_search/: __init__.py  embedders.py  mcp_server.py  retrievers.py  tokenizers.py
